--- a/src/assets/css/home/home-newGoods.css
+++ b/src/assets/css/home/home-newGoods.css
@@ -14,11 +14,7 @@ img {
 	margin-bottom: 1.5rem;
 }
 .head {
-  background: #C30D23;
-	position: fixed;
-	top: 0;
-	width: 100%;
-	z-index: 50;
+  height: .88rem;
 }
 .headBox {
 	padding: .52rem 1.48rem .09rem;
@@ -26,8 +22,12 @@ img {
 }
 .head .headTitle {
 	color: #fff;
-	font-size: 20px;
-	text-align: center;
+  font-size: 20px;
+  position: absolute;
+  bottom: 0.09rem;
+  margin-left: 50%;
+  transform: translate(-50%,0);
+  z-index: 70;
 }
 .headBox>span {
 	display: inline-block;
@@ -38,8 +38,21 @@ img {
 	bottom: .09rem;
 	left: .48rem;
 }
+.headTitle {
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+}
+.head .back {
+	display: inline-block;
+	width: .4rem;
+	height: .4rem;
+	position: absolute;
+	/* top: 0; */
+	bottom: .09rem;
+	left: .48rem;
+}
 .banner {
-	margin-top: .97rem;
 	margin-bottom: .36rem;
 	z-index: 30;
 }
